Mon Sep 16 20:28:38 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/tds/asprintf.c:
	- Provide a better/more portable {,v}asprintf() implementation
	  for systems that don't have one.

Mon Sep 16 16:59:27 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/cspublic.h include/ctpublic.h src/ctlib/unittests/common.h:
	- Add some prototypes for "gcc -Wall" in src/ctlib/unittests
	  (not finished yet)

Mon Sep 16 16:26:40 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/unittests/common.h src/tds/unittests/t0001.c
	  src/tds/unittests/t0003.c src/tds/unittests/t0004.c
	  src/tds/unittests/t0005.c src/tds/unittests/t0006.c
	- More "gcc -Wall" cleanups.

Mon Sep 16 22:03:52 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: fix for distribution and compile
	* src/odbc/connectparams.c src/odbc/odbc.c:
	- SQLDriverConnect should (not tested) work

Mon Sep 16 15:44:27 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/cspublic.h include/dblib.h include/sybdb.h include/tds.h.in
	  include/tdsutil.h src/apps/freebcp.c src/apps/tsql.c src/ctlib/cs.c
	  src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c src/server/login.c
	  src/server/server.c src/tds/config.c src/tds/iconv.c src/tds/token.c:
	- More "gcc -Wall" cleanups.

Sun Sep 15 18:45:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* acconfig.h configure.in src/apps/Makefile.am src/apps/tsql.c:
	- compile tsql with readline, if found

Sun Sep 15 18:03:56 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	- fix error dropping statement (do not cancel other results)
	- more compatibility converting to sql strings
	- fix numeric binding on output
	- added other type support to SQLColAttributes
	- workaround for SQLTables results from Sybase
	* src/odbc/prepare_query.c:
	- remove escaped sequences, do not stop on first call
